--- a/package.json
+++ b/package.json
@@ -1,22 +1,33 @@
 {
-  "name": "food",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/macedu1/learnJS_food.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/macedu1/learnJS_food/issues"
-  },
-  "homepage": "https://github.com/macedu1/learnJS_food#readme",
-  "devDependencies": {
-    "json-server": "^0.17.1"
-  }
+	"name": "food",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/macedu1/learnJS_food.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/macedu1/learnJS_food/issues"
+	},
+	"homepage": "https://github.com/macedu1/learnJS_food#readme",
+	"browserslist": [
+		"> 1%"
+	],
+	"devDependencies": {
+		"@babel/preset-env": "^7.20.2",
+		"babel-loader": "^9.1.2",
+		"core-js": "^3.27.2",
+		"json-server": "^0.17.1",
+		"webpack-cli": "^5.0.1"
+	},
+	"dependencies": {
+		"es6-promise": "^4.2.8",
+		"nodelist-foreach-polyfill": "^1.2.0"
+	}
 }
